--- a/app/views/file_users/_form.html.haml
+++ b/app/views/file_users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @file_user, html: { class: "form-horizontal", role: "form" }, id: 'form-file-user' do |f|
+= form_for @file_user, html: { class: "form-horizontal", role: "form", id: 'form-file-user' } do |f|
   -if @file_user.errors.any?
     .alert.alert-danger.alert-dismissable{role: "alert"}
       %button.close{type: "button", data: {dismiss: "alert"} }
@@ -16,4 +16,4 @@
       = f.file_field :name, class: 'form-control'
   .form-group
     .col-sm-offset-2.col-sm-4
-      = f.submit class: 'btn btn-primary'
+      = f.submit I18n.t(:file_upload), class: 'btn btn-primary'
