--- a/app/views/users/registrations/index.html.haml
+++ b/app/views/users/registrations/index.html.haml
@@ -1,11 +1,11 @@
 .page-header
-  = link_to users_new_path, class: 'btn btn-primary' do
+  = link_to users_new_path, id: 'link-new-user', class: 'btn btn-primary' do
     %span.glyphicon.glyphicon-plus
     =I18n.t(:new_user)
   %h1
     =I18n.t(:listing_users)
 .table-responsive
-  %table.table.table-striped.table-bordered.table-hover.dataTables-example
+  %table.table.table-striped.table-bordered.table-hover#data-table
     %thead
       %tr
         %th
@@ -26,13 +26,14 @@
           %td= user.email
           %td= user.role
           %td
-            = link_to user_edit_user_path(user) do
+            = link_to user_edit_user_path(user), id: 'edit-user-'+user.id.to_s do
               %i.fa.fa-pencil
               =I18n.t(:edit)
             &nbsp;
             &nbsp;
             - if user.role == 'no_admin'
-              = link_to user_delete_user_path(user), data: { confirm: I18n.t(:are_you_sure) }, method: :delete do
+              = link_to user_delete_user_path(user), id: 'destroy-user-'+user.id.to_s,
+                   data: { confirm: I18n.t(:are_you_sure_destroy_user) }, method: :delete do
                 %i.fa.fa-trash
                 =I18n.t(:destroy)
 
