--- a/app/views/users/registrations/show.html.haml
+++ b/app/views/users/registrations/show.html.haml
@@ -2,7 +2,7 @@
   = link_to users_index_path, class: 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     =I18n.t(:back)
-  = link_to users_update_user_path(@user), class: 'btn btn-primary' do
+  = link_to user_edit_user_path(@user), class: 'btn btn-primary' do
     %span.glyphicon.glyphicon-pencil
     =I18n.t(:edit)
   %h1
