--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,7 +13,7 @@
  * require animate/animate.css
  *= require style
  *= require jquery-ui/datepicker
- *= require apex-styless.scss 
+ *= require my-styless.scss 
  
  */
  #barcode-scanner canvas.drawingBuffer, #barcode-scanner video.drawingBuffer {
