--- a/app/assets/stylesheets/my-styless.scss
+++ b/app/assets/stylesheets/my-styless.scss
@@ -8,26 +8,25 @@
     display: flex;
     flex-direction: row;
     height: 100%;
-     
+    margin: 10px 12px 10px 12px;
 }
-.body-sign-in {
+
+.image-sign-in {
+    background-image: url('image_test_fs_dev1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100%;
-    width: 50%;
-    font-size: 1.5rem;
-    background-color: white;
- 
-}
-.body-sign-in-logo {
-    background-color: #007dc3;
-    margin-right: 4px;
+    width: 100%;
+    
 }
 .logo{
     padding-top: 15px;
     scroll-padding-left: 8px;
 }
 .content-sign-in {
-    width: 50%;
+    width: 100%;
     height: 100%;
+    
      
 
 }
@@ -62,5 +61,25 @@
 .invalid {
     background-color: crimson !important ;
     color: white !important ;
+}
+
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    background-color: darkmagenta;
+    color: white;
+    
+}
+
+.sub-title {
+    padding: 15px 15px 15px 15px;
+    
+}
+
+.container-dashboard {
+    padding-top: 10rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
 }
 
