--- a/app/views/static/_log_in.html.haml
+++ b/app/views/static/_log_in.html.haml
@@ -1,21 +1,25 @@
 .animated.fadeInDown
   .row.body-home-page
-    .col-md-6.body-sign-in-logo
-    .col-md-6.body-sign-in
-      .ibox-content.content-sign-in
-        = form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: 'm-t', id: 'form-sign-in'}) do |f|
-          .form-group
-            = f.text_field :email, class:'form-control', required: '', placeholder: I18n.t(:email), id: 'login-email'
-          .form-group
-            = f.password_field :password, autocomplete: "off", placeholder: I18n.t(:password), class: 'form-control', placeholder: 'senha', required: '', id: 'login-password'
-          .form-group
-            - if devise_mapping.rememberable?
-              = f.check_box :remember_me
-              = f.label :remember_me, I18n.t(:keep_conect)
-          = f.submit I18n.t(:get_in), class: 'btn btn-warning block full-width m-b'
-        .col-sm-6 
-          = link_to new_user_password_path, class: 'small' do
-            =I18n.t(:forgot_password)
-        .col-sm-6.text-right
-          = link_to static_sign_up_path do
-            =I18n.t(:sign_up)
+    .col-sm-8.image-sign-in
+      
+    .col-sm-4.content-sign-in
+      .col-sm-6
+        .row
+          = form_for(resource, as: resource_name, url: session_path(resource_name), html: {class: 'm-t', id: 'form-sign-in'}) do |f|
+            .form-group
+              = f.text_field :email, class:'form-control', required: '', placeholder: I18n.t(:email), id: 'login-email'
+            .form-group
+              = f.password_field :password, autocomplete: "off", placeholder: I18n.t(:password), class: 'form-control', placeholder: 'senha', required: '', id: 'login-password'
+            .form-group
+              - if devise_mapping.rememberable?
+                = f.check_box :remember_me
+                = f.label :remember_me, I18n.t(:keep_conect)
+            = f.submit I18n.t(:get_in), class: 'btn btn-warning block full-width m-b'
+        .row  
+          .col-sm-6 
+            /= link_to new_user_password_path, class: 'small' do
+            = link_to "#", class: 'small' do
+              =I18n.t(:forgot_password)
+          .col-sm-6.text-right
+            = link_to static_sign_up_path do
+              =I18n.t(:sign_up)
