--- a/app/views/static/sign_up.html.haml
+++ b/app/views/static/sign_up.html.haml
@@ -1,32 +1,24 @@
 .animated.fadeInDown
   .row.body-home-page
-    .col-md-6.body-sign-in-logo
-    .col-md-6.body-sign-up
+    .col-sm-8.image-sign-in
+    .col-sm-4.content-sign-in
       .page-header
-        = link_to profile_path, class: 'btn btn-default' do
-          %span.glyphicon.glyphicon-list-alt
-          =I18n.t(:back)
-        %h1
-          =I18n.t(:new_user)
-      = form_for(@user, url: {controller: :static, action: :create}, html: {class:"form-horizontal m-t-md", id: "form-sign-up"}) do |f|
-        .form-group
-          = f.label :full_name, I18n.t(:full_name), class: 'col-sm-3 control-label'
-          .col-sm-6
-            = f.text_field :full_name, autofocus: true, class: 'form-control'
-        .form-group
-          = f.label :email, I18n.t(:email), class: 'col-sm-3 control-label'
-          .col-sm-6
-            = f.text_field :email, class: "form-control"
-        .form-group
-          = f.label :password, I18n.t(:password), class: 'col-sm-3 control-label'
-          .col-sm-6
-            = f.password_field :password, autocomplete: "off", class: 'form-control'
-            %span.help-block.m-b-none
-              =I18n.t(:password_rule)
-        .form-group
-          = f.label :password_confirmation,I18n.t(:password_confirm), class: 'col-sm-3 control-label'
-          .col-sm-6
-            = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
-        .form-group
-          .col-sm-6
-            = f.submit I18n.t(:send), class: 'btn btn-primary'
+        .col-sm-6
+          %h1
+            =I18n.t(:new_user)
+          = form_for(@user, url: {controller: :static, action: :create}, html: {class:"form-horizontal m-t-md", id: "form-sign-up"}) do |f|
+            .form-group
+              = f.text_field :full_name, autofocus: true, placeholder: I18n.t(:full_name), class: 'form-control'
+            .form-group
+              = f.text_field :email, class: "form-control", placeholder: I18n.t(:email)
+            .form-group
+              = f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: I18n.t(:password)
+              %span.help-block.m-b-none
+                =I18n.t(:password_rule)
+            .form-group
+              = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: I18n.t(:repeat_password)
+            .form-group
+              = f.submit I18n.t(:send), class: 'btn btn-primary'
+              = link_to profile_path, class: 'btn btn-default' do
+                %span.glyphicon.glyphicon-list-alt
+                =I18n.t(:cancel)
