Tests in file_user

--- a/app/assets/stylesheets/my-styless.scss
+++ b/app/assets/stylesheets/my-styless.scss
@@ -69,11 +69,12 @@
     justify-content: left;
     background-color: darkmagenta;
     color: white;
+    padding: 5px;
     
 }
 
 .sub-title {
-    padding: 15px 15px 15px 15px;
+    padding: 15px ;
     
 }
 
